feat: add api for cctv lists
